# Video_editor_2.0

./: CMakeLists.txt  README.md
application/: main.cpp
include/: detectedObject.hpp  face_align.hpp  face_detector.hpp  face_recognition.hpp  landmarks_detector.hpp  video_assistance.hpp
src/: CMakeLists.txt  face_align.cpp  face_detector.cpp  face_recognition.cpp  landmarks_detector.cpp  video_assistance.cpp
